5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1834_1276.log
== TEST (2019-06-27 14:23:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("")))
a = shape(a)[1]
b = zeros(a,dtype=int)
for j in range(size(b)):
	b[j]= sim(:,j)
print(b)
-- ERROR:
File "XXXX", line 7
    b[j]= sim(:,j)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:23:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("")))
a = shape(a)[1]
b = zeros(a,dtype=int)
for j in range(size(b)):
	b[j]= sum(:,j)
print(b)
-- ERROR:
File "XXXX", line 7
    b[j]= sum(:,j)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:27:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("")))
a = shape(a)[1]
b = zeros(a,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:28:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
a = shape(a)[1]
b = zeros(a,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:34:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(c[:,j])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:35:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
print(b)
for j in range(size(b)):
	b[j]= sum(c[:,j])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:44:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
print(b)
for j in range(size(b)):
	b[j]= sum(a[:,j])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:49:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
print(b)
for j in range(size(b)):
	b[j]= sum(a[:,j])
t= sum(b)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:50:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
t= sum(b)
print(t/7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:54:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
x=0
for j in range(size(b)):
	if (b[i]==max(b)):
		x= i + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:55:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
x=0
for j in range(size(b)):
	if (b[j]==max(b)):
		x= j + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:58:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
print(c)
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
x=0
for j in range(size(b)):
	if (b[j]==max(b)):
		x= j + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:00:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
print(b)
x=0
for j in range(size(b)):
	if (b[j]==max(b)):
		x= j + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:00:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
print(b)
x=0
for j in range(size(b)):
	if (b[j]==max(b)):
		x= j + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:01:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
print(b)
x=0
for j in range(size(b)):
	if (b[j]==max(b)):
		x= j + 1
		print(x)
-- EXECUTION TIME:
0.994487
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[30 30 30 27 29 32 38]
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
[62 71 45 41 43 44 40]
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
[29 36 56 42 47 45 38]
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:01:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
x=0
for j in range(size(b)):
	if (b[j]==max(b)):
		x= j + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:01:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
x=0
for j in range(size(b)):
	if (b[j]==max(b)):
		x= j + 1
		print(x)
-- EXECUTION TIME:
0.935802
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:11:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
c = shape(a)[1]
b = zeros(c,dtype=int)
for j in range(size(b)):
	b[j]= sum(a[:,j])
for j in range(size(b)):
	if (b[j]==max(b)):
		x= j + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
